# cephalon-kronos

./: .gitattributes  .gitignore  .taurignore  ARCHITECTURE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: discord_release.yml  release.yml
docs/: index.html  styles.css
src/: App.jsx  index.css  main.jsx
src-tauri/: .taurignore  Cargo.toml  relicworkflow.md  tauri.conf.json
src-tauri/examples/: training_extractor.rs
src-tauri/icons/: icon.icns
src-tauri/src/: log_scanner.rs  main.rs  ocr.rs  overlay_utils.rs
src/components/: NotificationOverlay.jsx  UI.jsx
src/components/Notifications/: NotificationOverlay.jsx
src/components/overlays/: OverlayRouter.jsx  RelicRewardOverlay.jsx  ToastOverlay.jsx
src/contexts/: MonitoringContext.jsx  ThemeContext.jsx
src/lib/: inventoryParser.js  relicParser.js  settings.js  warframeUtils.js  wfmCache.js  worldstateParser.js
src/screens/: About.jsx  Checklist.jsx  Dashboard.jsx  Inventory.jsx  Maps.jsx  Mastery.jsx  Notes.jsx  Relics.jsx  Rivens.jsx  Settings.jsx
